# KMP-TdLib

./: README.md  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/native/: CMakeLists.txt  TdLibJNI.c  libtdjson_jni.dylib
composeApp/native/include/td/telegram/: td_api.h  td_api.hpp
composeApp/native/lib/macOS/: libtdjson.dylib
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/desktopMain/kotlin/org/adman/kmp/tdlib/: main.kt
composeApp/src/nativeInterop/cinterop/: tdlib.def
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
